<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <!--<EditTextPreference-->
        <!--android:defaultValue="@string/pref_location_default"-->
        <!--android:inputType="text"-->
        <!--android:key="@string/pref_location_key"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_location_label" />-->

    <ListPreference
        android:defaultValue="@string/pref_sort_order_most_popular"
        android:entries="@array/pref_sort_order_options"
        android:entryValues="@array/pref_sort_order_values"
        android:key="@string/pref_sort_order_key"
        android:title="@string/pref_sort_order_label" />

    <ListPreference
        android:entries="@array/pref_language_options"
        android:entryValues="@array/pref_language_values"
        android:key="@string/pref_language_key"
        android:title="@string/pref_language_label" />

    <!--<CheckBoxPreference-->
        <!--android:defaultValue="@bool/show_notifications_by_default"-->
        <!--android:key="@string/pref_enable_notifications_key"-->
        <!--android:summaryOff="@string/pref_enable_notifications_false"-->
        <!--android:summaryOn="@string/pref_enable_notifications_true"-->
        <!--android:title="@string/pref_enable_notifications_label" />-->

</PreferenceScreen>